--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Arial,Helvetica,sans-serif;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.app-header {
+  text-align: center;
+}
+
+.stockInput {
+  text-align: center;
 }
